<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="errorUserEmpty">No se admiten campos vacíos</string>
    <string name="errorEmailEmpty">No se admiten campos vacíos</string>
    <string name="errorPasswordEmpty">No se admiten campos vacíos</string>
    <string name="errorPassword">Contraseña incorrecta</string>
    <string name="errorEmailFormat">Formato de email no válido</string>
    <string name="errorShortname">Nombre corto no válido</string>
    <string name="errorDescription">Descripción no válida</string>
    <string name="errorDependencyDuplicate">Duplicado</string>
    <string name="errorName">Nombre no válido</string>
    <string name="errorDependencyNameEmptyError">Error: Nombre vacío</string>
    <string name="errorDependencyShortNameEmptyError">Error: Nombre corto vacío</string>
    <string name="errorDependencyShortNameLengthError">Error: Tamaño no válido</string>
    <string name="errorDependencyDescriptionEmptyError">Error: Dependencia vacía</string>
</resources>